--- a/css/sub_2.css
+++ b/css/sub_2.css
@@ -419,10 +419,6 @@ body {
     display: flex;
 }
 
-#section3 #gallery{
-    height: 543px;
-}
-
 #section3 #gallery .game_list {
     height: 543px;
     overflow: hidden;
@@ -444,7 +440,6 @@ body {
     color: #fff;
 }
 
-
 #section3 #gallery .game_list li img:hover {
     opacity: 0.8;
 }
@@ -457,6 +452,10 @@ body {
     font-weight: 400;
 }
 
+#section3 #gallery .iso-box-wrapper .iso-box{
+margin-bottom: 10px;
+}
+
 .gallery-thumb {
     width: 1320px;
     display: flex;
@@ -464,6 +463,7 @@ body {
 }
 
 .gallery-thumb img {
+    display: block;
     cursor: pointer;
 }
 
