--- a/css/sub_5.css
+++ b/css/sub_5.css
@@ -213,7 +213,7 @@ body {
     justify-content: center;
     margin-top: 31px;
 }
-#section1 .keywords_wrap>p{
+#section1 .keywords_wrap p{
     font-size: 16px;
 }
 
@@ -222,7 +222,7 @@ body {
 
 }
 
-#section1 .keywords p {
+#section1 .keywords a {
     background-color: #F0F0F0;
     border-radius: 20px;
     padding: 5px 15px;
