--- a/css/sub_5.css
+++ b/css/sub_5.css
@@ -245,6 +245,7 @@ body {
     border-bottom: 1px solid #000;
 }
 #section2 .flex_wrap a{
+    display: block;
     margin-right: 20px;
     padding-bottom: 30px;
 }
